style(animations): decoration change
Main animations for login or signup mode change plus some additional
animations for forms or color transitions.At last main colors change.

--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
     -->
     <title>Sharp</title>
   </head>
-  <body>
+  <body style="height: 100%; background-color: rgb(7, 1, 36);">
     <!-- <noscript>You need to enable JavaScript to run this app.</noscript> -->
     <script src="../src/index.js" ></script>
 
