feat(elements):add forgot password and verify email
Also added some alerts for client backend responses.

--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,8 @@
     -->
     <title>Sharp</title>
   </head>
-  <body style="height: 100%; background-color: rgb(7, 1, 36);">
+  <body style="height: 100%; background-color: whitesmoke">
+    <!-- rgb(7, 1, 36); -->
     <!-- <noscript>You need to enable JavaScript to run this app.</noscript> -->
     <script type="text/jsx" src="../src/index.js" ></script>
 
