feature(style):darkmode

--- a/public/index.html
+++ b/public/index.html
@@ -33,8 +33,7 @@
     -->
     <title>Sharp</title>
   </head>
-  <body style="height: 100%; background-color: whitesmoke">
-    <!-- rgb(7, 1, 36); -->
+  <body style="height: 100%; width: 100%;">
     <!-- <noscript>You need to enable JavaScript to run this app.</noscript> -->
     <script type="text/jsx" src="../src/index.js" ></script>
 
@@ -50,7 +49,7 @@
 
     <script>var Alert = ReactBootstrap.Alert;</script>
 
-    <div id="app"></div>
+    <div id="app" style="height: 100%; width: 100%;"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
